Improve generated tree